# ChangeLog for games-mud/tintin
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-mud/cvs-repo/gentoo-x86/games-mud/tintin/ChangeLog,v 1.29 2005/08/30 15:44:51 mr_bones_ Exp $

*tintin-1.95.5 (30 Aug 2005)

  30 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.95.5.ebuild:
  version bump

*tintin-1.95.3 (03 Aug 2005)

  03 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.95.3.ebuild:
  version bump

*tintin-1.95.2 (24 Jul 2005)

  24 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.95.2.ebuild:
  version bump

  20 Jun 2005; Michael Sterrett <mr_bones_@gentoo.org>
  files/digest-tintin-1.95.1, Manifest:
  digest fix (upstream changed archive) (bug #96626)

*tintin-1.95.1 (17 Jun 2005)

  17 Jun 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.95.1.ebuild:
  version bump

  15 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org> tintin-1.93.7.ebuild,
  tintin-1.94.9.ebuild, tintin-1.95.0.ebuild:
  Removed INSTALL file.

*tintin-1.95.0 (01 Jun 2005)

  01 Jun 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.95.0.ebuild:
  version bump

*tintin-1.94.9 (25 May 2005)

  25 May 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.94.9.ebuild:
  version bump

*tintin-1.94.8 (16 May 2005)

  16 May 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.94.8.ebuild:
  version bump

*tintin-1.94.7 (13 May 2005)

  13 May 2005; Michael Sterrett <mr_bones_@gentoo.org>
  -tintin-1.94.6.ebuild, +tintin-1.94.7.ebuild:
  version bump; clean older buggy version

*tintin-1.94.6 (08 May 2005)

  08 May 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.94.6.ebuild:
  version bump

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> tintin-1.93.7.ebuild:
  stable on amd64

  25 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org> tintin-1.93.7.ebuild:
  Stable on sparc

  23 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org> -tintin-1.93.3.ebuild: