@@ -2,11 +2,13 @@ MD5 5047f8cc168091a0069272f887291acc tintin-1.95.5.ebuild 981
 MD5 c7eed9aba8b757ea877ba5322022651d tintin-1.94.9.ebuild 975
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 MD5 0c6c7283411c3f94a4744c9f0269441f tintin-1.95.2.ebuild 981
+MD5 8727ca096f890cc52ceabaae7765ab7e tintin-1.95.6.ebuild 981
 MD5 c95d5e4577b710e362bf5e01d14f4b65 tintin-1.93.7.ebuild 968
-MD5 c4005127ba60d8210f07bd124ca00121 ChangeLog 3893
+MD5 2300f94855b414c80153f6ced18783e9 ChangeLog 4019
 MD5 1020918b887d8e3a2eeae465f93a5538 tintin-1.95.3.ebuild 981
 MD5 22c6a38e69a390493f762318aabbb44b files/digest-tintin-1.95.2 65
 MD5 18a7ee8137c6c65fd487f7251afb8e8d files/digest-tintin-1.95.3 65
 MD5 2d3f6788e9c4820e6c16a322dd871689 files/digest-tintin-1.93.7 65
 MD5 35274e4194893ea175959ae7e09954b8 files/digest-tintin-1.95.5 65
+MD5 e9572ddc573e8a17eaac8a19138024b5 files/digest-tintin-1.95.6 65
 MD5 d1944235f39a2d5be4e24f3408f8f800 files/digest-tintin-1.94.9 65
