@@ -1,6 +1,12 @@
 # ChangeLog for games-mud/tintin
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-mud/cvs-repo/gentoo-x86/games-mud/tintin/ChangeLog,v 1.29 2005/08/30 15:44:51 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-mud/cvs-repo/gentoo-x86/games-mud/tintin/ChangeLog,v 1.30 2005/10/13 18:14:47 mr_bones_ Exp $
+
+*tintin-1.95.6 (13 Oct 2005)
+
+  13 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org>
+  +tintin-1.95.6.ebuild:
+  version bump
 
 *tintin-1.95.5 (30 Aug 2005)
 
